# KotoStorage

./: .gitignore  README.md
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  metrics.py  models.py  schemas.py
frontend/: .env  .gitignore  Dockerfile  docker-compose.yml  jest.config.js  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: App.tsx  colors.css  globals.css  index.css  index.tsx  types.d.ts
frontend/src/__tests__/: App.test.tsx  BackgroundCats.test.tsx  Footer.test.tsx  GalleryGrid.test.tsx  Hamburger.test.tsx  ImagePreview.test.tsx  InformationSection.test.tsx  LinkButtonGroup.test.tsx  Navbar.test.tsx  SocialInfo.test.tsx  UIAnchor.test.tsx  UIButton.test.tsx  UIInput.test.tsx
frontend/src/__tests__/__snapshots__/: App.test.tsx.snap  BackgroundCats.test.tsx.snap  Footer.test.tsx.snap  GalleryGrid.test.tsx.snap  Hamburger.test.tsx.snap  ImagePreview.test.tsx.snap  InformationSection.test.tsx.snap  LinkButtonGroup.test.tsx.snap  Navbar.test.tsx.snap  SocialInfo.test.tsx.snap  UIAnchor.test.tsx.snap  UIButton.test.tsx.snap  UIInput.test.tsx.snap
frontend/src/components/BackgroundCats/: BackgroundCats.module.css  BackgroundCats.tsx  (+1 more)
frontend/src/hooks/: useCats.ts  useControlledInput.ts  useCurrentLocation.ts  useToggle.ts
frontend/src/types/: index.d.ts
k8s/: backend.yaml  config.yaml  frontend.yaml  grafana.yaml  postgres-config.yaml  postgres-secret.yaml  postgres.yaml  prometheus-config.yaml  prometheus.yaml
(+36 files in other folders)
